<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">Minetest Mods</string>


    <!-- Dialogs -->
    <string name="dialog_noext_title">No external storage available</string>
    <string name="dialog_noext_msg">We were unable to find the Minetest folder as there is no external storage available.
    External storage is a shared file location on your device, and doesn\'t necessarily mean an SD card.</string>
    <string name="dialog_nomt_title">Failed to create Minetest mod folder</string>
    <string name="dialog_nomt_msg">There wasn\'t a folder for mods on your device, so we attempted to create one.
        However, the attempt failed. The system may be denying this app access to it. Try running Minetest.</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_nowld_title">Unable to create world</string>
    <string name="dialog_nowld_msg">We tried to create a world for you to configure, but the operation failed.</string>
    <string name="dialog_no_minetest">Minetest isn\'t installed</string>
    <string name="dialog_no_minetest_msg">It\'s recommended that you install Minetest before using this app from your app store!</string>
    <string name="dialog_no_missing_mods_title">All good!</string>
    <string name="dialog_no_missing_mods_msg">All required dependencies are installed.</string>

    <!-- Menu -->
    <string name="action_search">Search</string>


    <!-- Mod List -->
    <string name="modlist_mods">Installed %1$s Mods</string>
    <string name="modlist_available_mods">Available Mods</string>
    <string name="modlist_installed">Installed</string>
    <string name="modlist_rate_txt">Hey! Fancy giving us some stars?</string>
    <string name="modlist_rate_yes">Rate</string>
    <string name="modlist_rate_no">No</string>
    <string name="modlist_tip_worldconfig">Enable a mod by clicking the world icon.</string>


    <!-- Mod Events -->
    <string name="event_installing_mod">Installing mod…</string>
    <string name="event_installed_mod">Installed %1$s.</string>
    <string name="event_installing">Installing %1$s…</string>
    <string name="event_connecting">Connecting…</string>
    <string name="event_downloading">Downloading…</string>
    <string name="event_extracting">Extracting…</string>
    <string name="event_failed_install">Failed to install mod %1$s. Error: %2$s.</string>
    <string name="event_failed_uninstall">Failed to uninstall mod %1$s. Error: %2$s.</string>
    <string name="failed_list_download">Failed to download available mod list. Error: %1$s.</string>

    <string name="event_missing_dependencies">Install Required Mods</string>
    <string name="event_missing_dependencies_msg">Would you like to install these missing dependencies?</string>
    <string name="event_missing_dependencies_msg_some_missing">Unfortunately, we couldn\'t find all the required mods :(</string>
    <string name="event_missing_dependencies_msg_all_missing">Unfortunately, we couldn\'t find any of the required mods :(</string>
    <string name="event_missing_dependencies_mtg_mods">WARNING: Make sure you\'ve opened Minetest at least once, some of these mods should come bundled.</string>

    <!-- Mod Details -->
    <string name="mod_title">Mod Detail</string>
    <string name="mod_action_install">Install</string>
    <string name="mod_action_uninstall">Uninstall</string>

    <string name="mod_tip_installed_elsewhere">Mod already installed to %1$s</string>
    <string name="mod_tip_view">View</string>

    <string name="mod_action_info">View Information</string>
    <string name="mod_action_check_depends">Check for missing dependencies</string>
    <string name="mod_action_report_mod">Report Mod</string>
    <string name="mod_action_forum_topic">View Forum Topic</string>
    <string name="mod_action_view_readme">View Read Me</string>

    <string name="mod_verified_yes">This mod is from a well known author.</string>
    <string name="mod_verified_no">This mod wasn\'t made by a well known author.</string>
    <string name="mod_verified_uk">Unable to determine the source of this mod.</string>

    <string name="mod_invalid_mod_title">Invalid Mod</string>
    <string name="mod_invalid_mod_desc">We couldn\'t find that mod. Has it been deleted?</string>
    <string name="mod_invalid_modlist_title">Invalid Mod Location or Path</string>
    <string name="mod_invalid_modlist_desc">We couldn\'t find that mod location. Has the folder been deleted, or is the available mod list offline?</string>


    <!-- Mod Info -->
    <string name="modinfo_title">Information</string>
    <string name="modinfo_details_name">Mod Name</string>
    <string name="modinfo_details_author">Author</string>
    <string name="modinfo_details_type">Type</string>
    <string name="modinfo_details_location">Folder</string>
    <string name="modinfo_details_link">Download URL</string>
    <string name="modinfo_details_size">Download Size</string>
    <string name="modinfo_details_size_unknown">Unknown</string>
    <string name="modinfo_details_type_mod" translatable="false">Mod</string>
    <string name="modinfo_details_type_modpack">Mod Pack</string>
    <string name="modinfo_details_type_subgame" translatable="false">Subgame</string>


    <!-- Readme -->
    <string name="readme_title">Read Me</string>


    <!-- Report -->
    <string name="report_title">Report Mod</string>
    <string name="report_modname_by_authorname">%1$s by %2$s</string>
    <string name="report_instructions">Please select the reason why you are reporting this mod.
        If you have any other information, please enter it in the text box.</string>
    <string name="report_reason">Reason</string>
    <string name="report_msg">Optional Message</string>
    <string name="report_details">Details</string>
    <string-array name="report_reasons">
        <item>Malicious / Virus</item>
        <item>Install doesn\'t work</item>
        <item>Other (please enter below)</item>
    </string-array>


    <!-- World config -->
    <string name="world_config">World Configuration</string>
    <string name="world_config_accept">Accept</string>
    <string name="world_config_saved">Saved configuration</string>


    <!-- Disclaimer -->
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer_agree">By using this service, you agree to the following
        terms and conditions.</string>
    <string name="disclaimer_1_t">No Warranty</string>
    <string name="disclaimer_1_m" translatable="false">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
        INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
        IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
        DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
        ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
        DEALINGS IN THE SOFTWARE.</string>

    <string name="disclaimer_2_t">Not a Mod Store, but a Mod Finder</string>
    <string name="disclaimer_2_m">The mods listed as available are a subset of the mods found
        on the Minetest forums. When you download a mod, you do not download it from our servers
        but rather from the original link that the author posted. Because of this,
        we cannot guarantee mods are safe. No one in particular checks these mods.</string>

    <string name="disclaimer_3_t">What can you do?</string>
    <string name="disclaimer_3_m">If you\'re unsure about the safety of a mod, check its
        forum topic. Look at how old the thread is, and what the comments say.</string>

    <string name="disclaimer_accept_and_install">Accept and Install</string>


    <!-- About -->
    <string name="about_title">Settings and About</string>
    <string name="about_credits">Credits</string>
    <string name="about_credits_dev">Developed by rubenwardy (rubenwardy.com)</string>
    <string name="about_credits_krock">Thank you to Krock (aka SmallJoker) for creating Krock\'s Mod Search,
        the crawler which the available mods list is based on.</string>
    <string name="about_credits_feedback">Thank you to DonBatman for feedback during development</string>
    <string name="about_credits_logo">The app logo is based on the Minetest logo which is CC-BY-SA 3.0,
        and created by erlehmann</string>
    <string name="about_credits_images">This app also uses several standard Android icons, which are CC-BY 4.0</string>
    <string name="mod_action_find_elsewhere">Find Elsewhere</string>
    <string name="about_credits_translation">Thank you to the following translators: my friend Soph (French), Dragonop (Spanish), Adrian (German), monolifed (Turkish), and muhdnurhidayat (Malay).</string>
    <string name="mod_action_mods_by_author">All mods by this author</string>

    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_restart_hint">A restart is required for theme changes to take effect outside of the settings screen.</string>
    <string name="settings_theme_restart">Restart</string>
    <string name="perm_storage_needed">Storage permission needed</string>
    <string name="donate">Donate</string>
    <string name="source_code">Source Code</string>
    <string name="translate">Translate</string>
    <string-array name="settings_theme_options">
        <item>System Default</item>
        <item>Light Theme</item>
        <item>Dark Theme</item>
        <item>Dark at Night, Light at Day</item>
    </string-array>
</resources>
