<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="16dp"
    android:baselineAligned="false"
    android:divider="?android:attr/dividerHorizontal"
    android:orientation="horizontal"
    android:showDividers="middle"
    tools:context="com.rubenwardy.minetestmodmanager.views.ModListActivity">

    <RelativeLayout
        android:layout_width="@dimen/modlist_width"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rate_me"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/hintBackground"
            android:visibility="gone">

            <TextView
                android:id="@+id/rate_no"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/modlist_rate_no"
                android:singleLine="true"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textColor="@color/hintAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/rate_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modlist_rate_yes"
                android:padding="10dp"
                android:singleLine="true"
                android:gravity="center_vertical"
                android:layout_toLeftOf="@id/rate_no"
                android:textAllCaps="true"
                android:textColor="@color/hintAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/rate_txt"
                android:padding="10dp"
                android:textColor="@color/hintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/rate_yes"
                android:text="@string/modlist_rate_txt" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/help_config"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/hintBackground"
            android:layout_below="@id/rate_me"
            android:visibility="gone">

            <TextView
                android:id="@+id/help_config_close"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/dialog_close"
                android:singleLine="true"
                android:padding="10dp"
                android:textAllCaps="true"
                android:textColor="@color/hintAccent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hintText"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@id/help_config_close"
                android:text="@string/modlist_tip_worldconfig" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/help_config"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/mod_list"
                    android:name="com.rubenwardy.minetestmodmanager.ModListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:scrollbars="none"
                    app:layoutManager="LinearLayoutManager"
                    tools:context="com.rubenwardy.minetestmodmanager.views.ModListActivity"
                    tools:listitem="@layout/mod_list_content" />

            </android.support.v4.widget.SwipeRefreshLayout>

            <com.futuremind.recyclerviewfastscroll.FastScroller
                android:id="@+id/fastscroll"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/mod_detail_container"
        android:background="@color/cardview_shadow_start_color"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3" />

</LinearLayout>
